# csv-compare-js

./: .gitignore  .tool-versions  README.md  package.json
example_data/: 1.csv  2.csv  a.csv  b.csv
public/: main.css
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: sparkles.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ComparisonTable.vue  FileUpload.vue
